[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
common = {path = "../common"}
bincode = "1.3.3"
futures = "0.3.19"

[dependencies.crossterm]
version = "0.22.1"
features = ["event-stream"]